format recipe collection

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,11 @@
   background-color: #ddd;
 }
 
+.page-image {
+  width: 50%;
+  float: right;
+}
+
 .fout-buster {
     display: block !important;
 }
