--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -1,14 +1,38 @@
 ---
 layout: default
 ---
-<article class="post">
+<article class="recipe-collection container">
 
-  <header class="post-header">
+  <header class="post-header m-b-1">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
   <div class="post-content">
-    {{ content }}
-  </div>
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Ingredients</h2>
+        <ul>
+          {% for ingredient in page.ingredients %}
+            <li>{{ ingredient }}</li>
+          {% endfor %}
+        </ul>
 
+        <h2>Instructions</h2>
+        <ol>
+          {% for instruction in page.instructions %}
+            <li>{{ instruction }}</li>
+          {% endfor %}
+        </ol>
+      </div>
+      <div class="col-md-6">
+        <img class="img-fluid" src="{{ page.image_path }}" alt="{{ page.title }}">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        {{ content }}
+      </div>
+    </div>
+  </div>
 </article>
