--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -10,28 +10,16 @@ layout: default
   <div class="post-content">
     <div class="row">
       <div class="col-md-6">
-        <h2>Ingredients</h2>
-        <ul>
-          {% for ingredient in page.ingredients %}
-            <li>{{ ingredient }}</li>
-          {% endfor %}
-        </ul>
-
-        <h2>Instructions</h2>
-        <ol>
-          {% for instruction in page.instructions %}
-            <li>{{ instruction }}</li>
-          {% endfor %}
-        </ol>
+        <div class="editable"></div>
       </div>
       <div class="col-md-6">
-        <img class="img-fluid" src="{{ page.image_path }}" alt="{{ page.title }}">
+        <img class="img-fluid editable" src="{{ page.image_path }}" alt="{{ page.title }}">
       </div>
     </div>
 
     <div class="row">
       <div class="col-md-12">
-        {{ content }}
+        <div class="editable"></div>
       </div>
     </div>
   </div>
