--- a/_layouts/recipe.html
+++ b/_layouts/recipe.html
@@ -3,23 +3,36 @@ layout: default
 ---
 <article class="recipe-collection container">
 
-  <header class="post-header m-b-1">
+  <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
   </header>
 
   <div class="post-content">
+    <img class="page-image" src="{{ page.image_path }}" alt="{{ page.title }}">
     <div class="row">
       <div class="col-md-6">
-        <div class="editable"></div>
+        <h2>Ingredients</h2>
+        <ul>
+          {% for ingredient in page.ingredients %}
+            <li>{{ ingredient }}</li>
+          {% endfor %}
+        </ul>
+
+        <h2>Instructions</h2>
+        <ol>
+          {% for instruction in page.instructions %}
+            <li>{{ instruction }}</li>
+          {% endfor %}
+        </ol>
       </div>
       <div class="col-md-6">
-        <img class="img-fluid editable" src="{{ page.image_path }}" alt="{{ page.title }}">
+        <img class="image-fluid" src="{{ page.image_path }}" alt="{{ page.title }}">
       </div>
     </div>
 
     <div class="row">
       <div class="col-md-12">
-        <div class="editable"></div>
+        {{ page.description }}
       </div>
     </div>
   </div>
